kubernetes-templates/mongo-db-staging/1/mongo-staging-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-staging-mongodb
    chart: mongodb-0.4.8
    heritage: Tiller
    release: mongo-staging
  name: mongo-staging-mongodb
  namespace: default
spec:
  ports:
  - name: mongodb
    port: ${MONGODB_PORT}
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo-staging-mongodb
  sessionAffinity: None
  type: ClusterIP
